feature(etapa-2): cambiando elephantsql a postgresql

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -2,6 +2,7 @@ version: '3'
 services:
   postgres:
     image: postgres:15.3
+    platform: linux/amd64
     restart: always
     environment:
       - POSTGRES_USER
