--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,6 +4,8 @@ services:
     container_name: movies_front_container
     build: movies-front
     command: npm start
+    ports:
+      - ${REACT_PORT}:${REACT_PORT}
     volumes:
       - ./movies-front:/usr/app
       - /usr/app/node_modules
@@ -11,11 +13,11 @@ services:
       - movies-api
     environment:
       - PORT=${REACT_PORT}
+      - REACT_APP_API_URI=http://localhost:${BIND_PORT} # No puede ser ${BIND_IP} porque ahora es el navegador quien hace la solicitud
    
   movies-api:
     container_name: movies_api_container
-    build: 
-      context: ./movies-api
+    build: movies-api
     image: movies_api
     command: "/movies-api -b ${BIND_IP} -p ${BIND_PORT}"
     environment:
